# prog-paralela

./: .gitignore  NOTES.md  README.md
001.fractal-Julia/: CMakeLists.txt  NOTES.md  fractal_openmp.cpp  fractal_openmp.h  fractal_serial.cpp  fractal_simd.cpp  main.cpp
01.fractal-julia/: CMakeLists.txt  main.cpp
02.fractal-java/: .gitignore  build.gradle.kts
02.fractal-java/src/main/java/com/programacion/paralela/: FPSCounter.java  FractalCpu.java  FractalDll.java  FractalMain.java  FractalParams.java  FractalSimd.java
03.fractal-dll/: CMakeLists.txt  comandos.txt  fractal_simd.cpp  fractal_simd.h  palette.cpp
04.ejemplo-openmp/: CMakeLists.txt  fractal_openmp.cpp  main.cpp
05.ejemplo-mpi/: CMakeLists.txt  main.cpp  matrices_mult.cpp
05.tarea-mpi_matrices/: CMakeLists.txt  matrices_mult.cpp  matrices_mult_padding.cpp
05.tarea-mpi_matrices_collective/: CMakeLists.txt  matrices_mult_colectiva.cpp
06.fractal-mpi/: CMakeLists.txt  fractal_mpi.h  main.cpp
06.fractal-mpi-0/: fractal_mpi.cpp
07.cuda/: CMakeLists.txt  kernel.cu  main.cpp
07.tarea-grupal-calor2d/: CMakeLists.txt  PLAN.md  args.cpp  args.h  heat_mpi.cpp  heat_mpi.h  heat_openmp.cpp  heat_openmp.h  heat_serial.cpp  heat_serial.h  heat_simd.cpp  heat_simd.h  main.cpp  palette.cpp  palette.h
08.fractal-cuda/: CMakeLists.txt  kernel.cu  main.cpp  notas.txt
CC-PAR-EXAMEN01/: producto_escalar.cpp  producto_escalar.h
CC-PAR-EXAMEN02/: filtro.cpp  filtro.h  main.cpp
Practice/: CMakeLists.txt  CUDA.md  MATH.md  main.cpp  matriz.h  producto.cpp  test.cpp
Practice/MPI/07.plantillas-mpi/: 01_base.cpp  02_punto_a_punto.cpp  03_colectivas.cpp  CMakeLists.txt  README.md
Practice/MPI/08.ejemplos-cap8-mpi/: 01_minimo.cpp  02_sendrecv.cpp  03_barrera_wtime.cpp  04_bcast_archivo.cpp  05_reduce_min_max_avg.cpp  06_gather_impresion.cpp  07_scatterv_gatherv.cpp  08_stream_triad.cpp  CMakeLists.txt  README.md  entrada.txt
Practice/MPI/Practice/: 01_base.cpp  02_punto_a_punto.cpp  03_colectivas.cpp  04_producto_exterior.cpp  05_suma.cpp  06_max.cpp  07_exterior_colectivas.cpp  08_suma_colectivas.cpp  09_leer_archivo.cpp  10_estadisticas.cpp  11_vocales.cpp  12_vocales_colectivas.cpp  13_imagen.cpp  14_imagen_colectivas.cpp  15_matriz_vector.cpp  16_matriz_matriz.cpp  CMakeLists.txt  Pasos.md  procesamientoImagen.cpp.txt  procesamientoImagen_n8.cpp.txt
Practice/OpenMP/CC-PAR-EXAMEN01/: CMakeLists.txt  main.cpp  producto_escalar.cpp  producto_escalar.h
Practice/OpenMP/CC-PAR-EXAMEN02/: CMakeLists.txt  NOTES.md
Practice/OpenMP/Plantillas/: main.cpp  matriz.cpp  notes.txt  practice.cpp  practice.h  producto.h  test.h
Practice/notes/: Capitulo_8_MPI_anki.txt  Codigo_MPI_anki.txt  mpi configuracionn.txt
Practice/notes/MPI/: Seccion_8-3_Comunicacion_colectiva_es.md  Seccion_8-4_Ejemplos_paralelismo_datos_es.md  Seccion_8-6_y_cierre_capitulo_es.md
Practice/notes/U1/: EJERCICIOS.md
Practice/practica-final-cuda/: CMakeLists.txt  burning_ship_hybrid.cu  kernel.cu  main.cpp
Practice/practica-final-hibrida/: CMakeLists.txt  fractal.cpp  fractal.h  kernel.cu  main.cpp
correcion-examen-1/: palette.cpp
correcion-examen-2/: arial_ttf.h
correcion-prueba-1/: fractal.cpp  fractal.h  main.cpp
correcion-prueba-2/: draw_text.cpp  draw_text.h  main.cpp
ejemplo01/: CMakeLists.txt  main.cpp
ejemplo02/: CMakeLists.txt  main.cpp
grupal/: ejercicio.md
grupal/ecuacion-calor2d-compartida/: CMakeLists.txt  calor_openmp.cpp  calor_openmp.h  calor_serial.cpp  calor_serial.h  calor_simd.cpp  calor_simd.h  main.cpp  palette.cpp  palette.h
grupal/ecuacion-calor2d-distribuida/: CMakeLists.txt  arial_ttf.h  calor_mpi.cpp  calor_mpi.h  main.cpp
notes/: Capitulo_8_MPI_completo_es.md  Capitulo_8_MPI_guia_estudio.md
notes/MPI/: Capitulo_8_MPI_traduccion_es.md
notes/U1/: NOTES.md  PLANTILLAS_EJERCICIOS.md
prueba/: fractal.cpp  fractal.h  main.cpp
pruebas/correcion-prueba-1/: CMakeLists.txt
pruebas/correcion-prueba-2/: fractal.cpp  fractal.h  palette.cpp
pruebas/prueba_cuda/: CMakeLists.txt  cuda_simd_hybrid.cu  grayscale.cu  hibrido_openmp_cuda.cu  kernel.cu  main.cpp  plantilla.cu
